--- a/EmbeddedCode/BackupPlan/BackupPlan.ioc
+++ b/EmbeddedCode/BackupPlan/BackupPlan.ioc
@@ -1,22 +1,19 @@
 #MicroXplorer Configuration settings - do not modify
-ETH.IPParameters=MediaInterface,PHY_Name,PHY_Value,PhyAddress
-ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
-ETH.PHY_Name=LAN8742A_PHY_ADDRESS
-ETH.PHY_Value=0
-ETH.PhyAddress=0
 FREERTOS.FootprintOK=true
 FREERTOS.IPParameters=Tasks01,configUSE_NEWLIB_REENTRANT,FootprintOK
 FREERTOS.Tasks01=blinkLED01,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL;blinkLED02,8,128,StartTask02,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.IPParameters=Timing
+I2C1.Timing=0x00808CD2
 KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=CORTEX_M7
-Mcu.IP1=ETH
+Mcu.IP1=FATFS
 Mcu.IP10=USB_OTG_FS
-Mcu.IP2=FATFS
-Mcu.IP3=FREERTOS
+Mcu.IP2=FREERTOS
+Mcu.IP3=I2C1
 Mcu.IP4=NVIC
 Mcu.IP5=RCC
 Mcu.IP6=SPI1
@@ -52,18 +49,20 @@ Mcu.Pin29=PG13
 Mcu.Pin3=PH0/OSC_IN
 Mcu.Pin30=PB3
 Mcu.Pin31=PB5
-Mcu.Pin32=PB7
-Mcu.Pin33=VP_FATFS_VS_Generic
-Mcu.Pin34=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin35=VP_SYS_VS_tim14
-Mcu.Pin36=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin32=PB6
+Mcu.Pin33=PB7
+Mcu.Pin34=PB9
+Mcu.Pin35=VP_FATFS_VS_Generic
+Mcu.Pin36=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin37=VP_SYS_VS_tim14
+Mcu.Pin38=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PH1/OSC_OUT
 Mcu.Pin5=PC1
 Mcu.Pin6=PA1
 Mcu.Pin7=PA2
 Mcu.Pin8=PA4
 Mcu.Pin9=PA5
-Mcu.PinsNb=37
+Mcu.PinsNb=39
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F746ZGTx
@@ -90,7 +89,6 @@ NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=RMII_REF_CLK [LAN8742A-CZ-TR_REFCLK0]
 PA1.Locked=true
-PA1.Mode=RMII
 PA1.Signal=ETH_REF_CLK
 PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=USB_ID
@@ -119,7 +117,6 @@ PA14.Signal=SYS_JTCK-SWCLK
 PA2.GPIOParameters=GPIO_Label
 PA2.GPIO_Label=RMII_MDIO [LAN8742A-CZ-TR_MDIO]
 PA2.Locked=true
-PA2.Mode=RMII
 PA2.Signal=ETH_MDIO
 PA4.GPIOParameters=GPIO_Label
 PA4.GPIO_Label=SPI1_CS
@@ -132,7 +129,6 @@ PA6.Signal=SPI1_MISO
 PA7.GPIOParameters=GPIO_Label
 PA7.GPIO_Label=RMII_CRS_DV [LAN8742A-CZ-TR_CRS_DV]
 PA7.Locked=true
-PA7.Mode=RMII
 PA7.Signal=ETH_CRS_DV
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=USB_SOF [TP1]
@@ -151,7 +147,6 @@ PB0.Signal=GPIO_Output
 PB13.GPIOParameters=GPIO_Label
 PB13.GPIO_Label=RMII_TXD1 [LAN8742A-CZ-TR_TXD1]
 PB13.Locked=true
-PB13.Mode=RMII
 PB13.Signal=ETH_TXD1
 PB14.GPIOParameters=GPIO_Label
 PB14.GPIO_Label=LD3 [Red]
@@ -163,14 +158,17 @@ PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
 PB5.Mode=Full_Duplex_Master
 PB5.Signal=SPI1_MOSI
+PB6.Mode=I2C
+PB6.Signal=I2C1_SCL
 PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=LD2 [Blue]
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC1.GPIOParameters=GPIO_Label
 PC1.GPIO_Label=RMII_MDC [LAN8742A-CZ-TR_MDC]
 PC1.Locked=true
-PC1.Mode=RMII
 PC1.Signal=ETH_MDC
 PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=USER_Btn [B1]
@@ -185,12 +183,10 @@ PC15/OSC32_OUT.Signal=RCC_OSC32_OUT
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=RMII_RXD0 [LAN8742A-CZ-TR_RXD0]
 PC4.Locked=true
-PC4.Mode=RMII
 PC4.Signal=ETH_RXD0
 PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=RMII_RXD1 [LAN8742A-CZ-TR_RXD1]
 PC5.Locked=true
-PC5.Mode=RMII
 PC5.Signal=ETH_RXD1
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
@@ -205,12 +201,10 @@ PD9.Signal=USART3_RX
 PG11.GPIOParameters=GPIO_Label
 PG11.GPIO_Label=RMII_TX_EN [LAN8742A-CZ-TR_TXEN]
 PG11.Locked=true
-PG11.Mode=RMII
 PG11.Signal=ETH_TX_EN
 PG13.GPIOParameters=GPIO_Label
 PG13.GPIO_Label=RMII_TXD0 [LAN8742A-CZ-TR_TXD0]
 PG13.Locked=true
-PG13.Mode=RMII
 PG13.Signal=ETH_TXD0
 PG6.GPIOParameters=GPIO_Label
 PG6.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
@@ -258,7 +252,7 @@ ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ThreadSafeStrategy=Cortex-M7NS\:Default,
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_SPI1_Init-SPI1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ETH_Init-ETH-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_FATFS_Init-FATFS-false-HAL-false,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_I2C1_Init-I2C1-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
